# tala-pala

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
prediction-python/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
prediction-python/app/: __init__.py  config.py  db.py  main.py  metrics.py
prediction-python/app/backtest/: engine.py
prediction-python/app/core/: formula.py  freshness.py  issues.py  market_hours.py  normalize.py  validation.py
prediction-python/app/features/: engineering.py
prediction-python/app/jobs/: cleanup.py  collect.py  evaluate.py  features.py
prediction-python/app/models/: analogue.py  arima.py  base.py  baselines.py  classical.py  custom.py  ensemble.py  intervals.py  metagate.py  ml.py  predicting.py  sarimax_exog.py  training.py  tvinspired.py
prediction-python/app/providers/: alanchand.py  base.py  bitmax.py  brsapi.py  gold_api.py  hamrahgold.py  htmlparse.py  metals_dev.py  milligold.py  navasan.py  pricedb.py  registry.py  tgju.py  (+3 more)
prediction-python/data_samples/: ir_gold_18k_daily_sample.csv  usd_irt_daily_sample.csv  xauusd_daily_sample.csv
prediction-python/scripts/: make_samples.py
prediction-python/tests/: conftest.py  test_api.py  test_backtest.py  test_calibration.py  test_features_leakage.py  test_formula.py  test_market_hours.py  test_models.py  test_new_models.py  test_normalize.py  test_pipeline_e2e.py  test_providers.py  test_selflearning.py  test_signals.py  test_training_walkforward.py  test_tse_funds.py  test_tvinspired.py  test_validation.py
(+192 files in other folders)
